<resources>
    <string name="app_name">LaRed</string>
    <string name="cliente">CLIENTE</string>
    <string name="negocio">Negocio</string>
    <string name="eres_nuevo_en_la_red">Eres nuevo en la Red?</string>
    <string name="donde_tus_compras_se_convierten_en_dinero">Donde tus compras se convierten en Dinero $$$</string>
    <string name="vamos_a_lared">Vamos a LaRed</string>
    <string name="bienvenido_a_lared">Bienvenido a LaRed</string>
    <string name="n_mero_m_vil">Número Móvil</string>
    <string name="contrase_a">Contraseña</string>
    <string name="title_activity_registro_negocio">registro_negocio</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="cu_ntanos_acerca_de_la_ubicaci_n_de_tu_negocio">Cuéntanos acerca de la ubicación de tu Negocio
    </string>
    <string name="ciudad">Ciudad</string>
    <string name="pa_s">País</string>
    <string name="label_barrio">Barrio</string>
    <string name="label_direcci_n">Dirección</string>
    <string name="es_cliente">Cliente</string>
    <string name="es_negocio">Negocio</string>
    <string name="registrar">Registrar</string>
    <string name="barrio">Barrio</string>
    <string name="direcci_n">Dirección</string>
    <string name="cargar_foto_de_tu_negocio">Cargar Foto de tu Negocio</string>
    <string name="olvidaste_tu_contrase_a">Olvidaste tu contraseña?</string>
    <string name="registrate_en_lared">Registrate en LaRed</string>
    <string name="correo_electr_nico_cli">Correo Electrónico</string>
    <string name="contrase_a_cli">Contraseña</string>
    <string name="n_mero_de_documento_cli">Número de Documento</string>
    <string name="continuar_regcli1">Continuar</string>
    <string-array name="tipo_negocio">
        <item>Escoja su tipo de negocio</item>
        <item>Almacén</item>
        <item>Bar</item>
        <item>Barbería</item>
        <item>Cacharrería</item>
        <item>Cafetería</item>
        <item>Carpintería</item>
        <item>Cerrajería</item>
        <item>Comidas Rápidas</item>
        <item>Charcutería</item>
        <item>Droguería</item>
        <item>Fruteria</item>
        <item>Heladería</item>
        <item>Juguetería</item>
        <item>Lavandería</item>
        <item>Librería</item>
        <item>Licorera</item>
        <item>Marquetería</item>
        <item>MiniMercado</item>
        <item>Modistería</item>
        <item>Mueblería</item>
        <item>Panadería</item>
        <item>Papelería</item>
        <item>Peluquería</item>
        <item>Restaurante</item>
        <item>Restaurante-Bar</item>
        <item>Textilería</item>
        <item>Taller</item>
        <item>Tienda</item>
        <item>Spa</item>
        <item>Supermercado</item>
        <item>Vidriería</item>
    </string-array>
    <string-array name="tipo_documento_negocio">
        <item>Escoja su tipo de documento</item>
        <item>Nit</item>
        <item>Cédula</item>
    </string-array>
    <string-array name="tipo_documento_cliente">
        <item>Escoja su tipo de documento</item>
        <item>Cédula</item>
        <item>Cédula de extranjería</item>
        <item>Pasaporte</item>
    </string-array>
    <string-array name="pais_negocio">
        <item>Escoja el país de ubicación de su negocio</item>
        <item>Colombia</item>
        <item>Argentina</item>
        <item>Bahamas</item>
        <item>Barbados</item>
        <item>Belice</item>
        <item>Bolivia</item>
        <item>Brasil</item>
        <item>Canadá</item>
        <item>Chile</item>
        <item>Costa Rica</item>
        <item>Cuba</item>
        <item>Dominica</item>
        <item>Ecuador</item>
        <item>El Salvador</item>
        <item>EEUU</item>
        <item>Grenada</item>
        <item>Guatemala</item>
        <item>Guayana Francesa</item>
        <item>Guyana</item>
        <item>Haití</item>
        <item>Honduras</item>
        <item>Jamaica</item>
        <item>México</item>
        <item>Nicaragua</item>
        <item>Panamá</item>
        <item>Paraguay</item>
        <item>Perú</item>
        <item>Puerto Rico</item>
        <item>República Dominicana</item>
        <item>San Cristóbal y Nevis</item>
        <item>San Vicente y Granadinas</item>
        <item>Santa Lucía</item>
        <item>Surinam</item>
        <item>Trinidad y Tobago</item>
        <item>Uruguay</item>
        <item>Venezuela</item>
    </string-array>
    <string-array name="barrios_medellin">
        <item>Escoja su barrio de preferencia</item>
        <item>*COMUNA 1*</item>
            <item>Carpinelo</item>
            <item>El Compromiso</item>
            <item>Granizal</item>
            <item>La Avanzada</item>
            <item>La Esperanza Nº 2</item>
            <item>Moscú Nº 2</item>
            <item>Popular Nº 1</item>
            <item>Popular Nº 2</item>
            <item>Santo Domingo Savio Nº 1</item>
            <item>Santo Domingo Savio Nº 2</item>
            <item>San Pablo</item>
            <item>Villa Guadalupe</item>
        <item>*COMUNA 2*</item>
            <item>Santa Cruz</item>
            <item>La Isla</item>
            <item>El Playón de Los Comuneros</item>
            <item>Pablo VI</item>
            <item>La Frontera</item>
            <item>La Francia</item>
            <item>Andalucía</item>
            <item>Villa del Socorro</item>
            <item>Villa Niza</item>
            <item>Moscú Nº 1</item>
            <item>La Rosa</item>
    </string-array>
    <string-array name="pregunta1_cliente">
        <item>Escoja la primera pregunta</item>
        <item>Apodo en la niñez?</item>
        <item>Nombre primera mascota?</item>
        <item>Primera ciudad que visité?</item>
        <item>Apodo de mi mejor amigo(a) de la niñez?</item>
        <item>Video Juego que no me gusta?</item>
        <item>Año de mi primer vuelo en avión?</item>
        <item>Apellido de mi mejor amigo(a) en el colegio?</item>
    </string-array>
    <string-array name="pregunta2_cliente">
        <item>Escoja la segunda pregunta</item>
        <item>Apodo en la niñez?</item>
        <item>Nombre primera mascota?</item>
        <item>Primera ciudad que visité?</item>
        <item>Apodo de mi mejor amigo(a) de la niñez?</item>
        <item>Video Juego que no me gusta?</item>
        <item>Año de mi primer vuelo en avión?</item>
        <item>Apellido de mi mejor amigo(a) en el colegio?</item>
    </string-array>
</resources>