<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".registro_negocio3">
    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/bienvenido_a_lared"
            android:id="@+id/estas_enred"
            android:textColor="#009688" android:textColorHighlight="#E91E63"
            android:visibility="invisible"
            app:layout_constraintTop_toTopOf="parent" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginTop="14dp" android:layout_marginLeft="16dp" android:layout_marginStart="16dp"/>
    <TextView
            android:text="@string/cu_ntanos_acerca_de_la_ubicaci_n_de_tu_negocio"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/acercade2" android:textColor="#009688"
            app:layout_constraintStart_toStartOf="@+id/estas_enred" android:layout_marginTop="12dp"
            android:layout_marginLeft="36dp" android:layout_marginStart="36dp"
            app:layout_constraintTop_toBottomOf="@+id/estas_enred"/>
    <Button
            android:text="@string/registrar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/registrar_neg" android:background="#FBFBFB"
            android:textColor="#FF9800"
            app:layout_constraintBottom_toBottomOf="parent" android:layout_marginEnd="16dp"
            android:layout_marginRight="16dp" android:layout_marginBottom="16dp"
            app:layout_constraintEnd_toEndOf="parent"/>
    <TextView
            android:text="@string/pa_s"
            android:layout_width="50dp"
            android:layout_height="17dp"
            android:id="@+id/label_pais" android:textColor="#009688"
            app:layout_constraintTop_toTopOf="@+id/acercade2" app:layout_constraintStart_toStartOf="@+id/pais_negocio"
            android:layout_marginTop="64dp" android:layout_marginBottom="63dp"
            app:layout_constraintBottom_toTopOf="@+id/label_ciudad"/>
    <TextView
            android:text="@string/ciudad"
            android:layout_width="87dp"
            android:layout_height="26dp"
            android:id="@+id/label_ciudad" android:textColor="#009688"
            app:layout_constraintTop_toTopOf="parent" app:layout_constraintStart_toStartOf="@+id/ciudad_negocio"
            android:layout_marginTop="189dp" app:layout_constraintBottom_toBottomOf="@+id/label_direccion"
            android:layout_marginBottom="189dp"/>
    <TextView
            android:text="@string/barrio"
            android:layout_width="114dp"
            android:layout_height="34dp"
            android:id="@+id/label_barrio" android:textColor="#009688"
            app:layout_constraintTop_toTopOf="@+id/pais_negocio" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginTop="156dp" android:layout_marginLeft="16dp" android:layout_marginStart="16dp"
            android:layout_marginBottom="156dp" app:layout_constraintBottom_toTopOf="@+id/label_foto"/>
    <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:ems="10"
            android:id="@+id/barrio_negocio"
            android:textColor="#009688"
            app:layout_constraintTop_toTopOf="parent" app:layout_constraintStart_toStartOf="@+id/label_barrio"
            android:layout_marginTop="316dp"/>
    <TextView
            android:text="@string/direcci_n"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/label_direccion" android:textColor="#009688"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginTop="24dp"
            android:layout_marginLeft="16dp" android:layout_marginStart="16dp"
            app:layout_constraintTop_toBottomOf="@+id/barrio_negocio"/>
    <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:ems="10"
            android:id="@+id/direccion_negocio"
            android:textColor="#009688"
            app:layout_constraintStart_toStartOf="@+id/label_direccion"
            app:layout_constraintTop_toBottomOf="@+id/label_direccion"/>
    <TextView
            android:text="@string/cargar_foto_de_tu_negocio"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/label_foto" android:textColor="#009688"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginTop="23dp"
            android:layout_marginLeft="16dp" android:layout_marginStart="16dp"
            app:layout_constraintTop_toBottomOf="@+id/direccion_negocio"/>
    <ImageButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" tools:srcCompat="@tools:sample/backgrounds/scenic"
            android:id="@+id/foto_negocio"
            app:layout_constraintStart_toStartOf="@+id/label_foto"
            app:layout_constraintTop_toBottomOf="@+id/label_foto"/>
    <Button
            android:text="atrás"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/atras_finalregistronegocio"
            android:background="#FBFBFB" android:textColor="#F44336"
            app:layout_constraintStart_toStartOf="@+id/foto_negocio" app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginBottom="16dp"/>
    <Spinner
            android:layout_width="0dp"
            android:layout_height="37dp"
            android:id="@+id/pais_negocio"
            android:entries="@array/pais_negocio"
            android:layout_marginTop="17dp"
            android:layout_marginBottom="26dp" app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toTopOf="@+id/label_ciudad" app:layout_constraintTop_toTopOf="@+id/label_pais"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginLeft="16dp"
            android:layout_marginStart="16dp" android:layout_marginEnd="16dp" android:layout_marginRight="16dp"/>
    <Spinner
            android:layout_width="0dp"
            android:layout_height="35dp"
            android:id="@+id/ciudad_negocio" android:layout_marginTop="26dp"
            android:layout_marginBottom="32dp" app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toTopOf="@+id/label_barrio" app:layout_constraintTop_toTopOf="@+id/label_ciudad"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginLeft="16dp"
            android:layout_marginStart="16dp" android:layout_marginEnd="16dp" android:layout_marginRight="16dp"/>

</androidx.constraintlayout.widget.ConstraintLayout>