<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".registro_cliente1">
    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/bienvenido_a_lared"
            android:id="@+id/estas_enred"
            android:textColor="#009688" android:textColorHighlight="#E91E63"
            android:visibility="invisible"
            app:layout_constraintTop_toTopOf="parent" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginTop="16dp" android:layout_marginLeft="16dp" android:layout_marginStart="16dp"/>
    <TextView
            android:text="@string/registrate_en_lared"
            android:layout_width="149dp"
            android:layout_height="22dp"
            android:id="@+id/labelconocercliente1"
            android:clickable="false" android:background="#FBFBFB"
            android:textColor="#009688"
            android:layout_marginTop="19dp"
            android:layout_marginBottom="27dp" app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toTopOf="@+id/label_tipodoccliente"
            app:layout_constraintTop_toTopOf="@+id/estas_enred" app:layout_constraintStart_toStartOf="parent"/>
    <TextView
            android:text="Tipo de Documento"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/label_tipodoccliente" android:textColor="#009688"
            app:layout_constraintTop_toTopOf="@+id/estas_enred" app:layout_constraintStart_toStartOf="@+id/tipo_doc_cliente"
            android:layout_marginTop="68dp" android:layout_marginBottom="70dp"
            app:layout_constraintBottom_toTopOf="@+id/label_numdoccliente"/>
    <TextView
            android:text="@string/n_mero_de_documento_cli"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/label_numdoccliente" android:textColor="#009688"
            app:layout_constraintTop_toTopOf="parent" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginLeft="16dp" android:layout_marginTop="173dp" android:layout_marginStart="16dp"/>
    <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="number"
            android:ems="10"
            android:id="@+id/numdoccliente"
            android:textColor="#009688"
            android:maxLength="12"
            app:layout_constraintStart_toStartOf="@+id/label_numdoccliente"
            app:layout_constraintTop_toBottomOf="@+id/label_numdoccliente"/>
    <TextView
            android:text="@string/correo_electr_nico_cli"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/label_email" android:textColor="#009688"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginTop="24dp"
            android:layout_marginLeft="16dp" android:layout_marginStart="16dp"
            app:layout_constraintTop_toBottomOf="@+id/numdoccliente"/>
    <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="textEmailAddress"
            android:ems="10"
            android:id="@+id/email_cliente"
            android:textColor="#009688"
            app:layout_constraintStart_toStartOf="@+id/label_email"
            app:layout_constraintTop_toBottomOf="@+id/label_email"/>
    <TextView
            android:text="@string/contrase_a_cli"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/label_pwd_cliente" android:textColor="#009688"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginTop="28dp"
            android:layout_marginLeft="16dp" android:layout_marginStart="16dp"
            app:layout_constraintTop_toBottomOf="@+id/email_cliente"/>
    <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:ems="10"
            android:id="@+id/pwd_cliente"
            android:maxLength="15" android:textColor="#009688"
            app:layout_constraintStart_toStartOf="@+id/label_pwd_cliente"
            app:layout_constraintTop_toBottomOf="@+id/label_pwd_cliente"/>
    <Button
            android:text="@string/continuar_regcli1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/cont_regcliente1" android:background="#FBFBFB"
            android:textColor="#009688"
            app:layout_constraintBottom_toBottomOf="parent" android:layout_marginEnd="16dp"
            android:layout_marginRight="16dp" android:layout_marginBottom="16dp"
            app:layout_constraintEnd_toEndOf="parent"/>
    <TextView
            android:text="Ingrese nuevamente la contraseña"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/label_repetirpwd_cliente"
            android:textColor="#009688"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginTop="25dp"
            android:layout_marginLeft="16dp" android:layout_marginStart="16dp"
            app:layout_constraintTop_toBottomOf="@+id/pwd_cliente"/>
    <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:ems="10"
            android:id="@+id/repetirpwd_cliente" android:textColor="#009688"
            android:maxLength="15"
            app:layout_constraintStart_toStartOf="@+id/label_repetirpwd_cliente"
            app:layout_constraintTop_toBottomOf="@+id/label_repetirpwd_cliente"/>
    <Button
            android:text="Atrás"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/atras_registrocliente1" android:background="#FBFBFB"
            android:textColor="#FF5722"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginLeft="16dp"
            app:layout_constraintBottom_toBottomOf="parent" android:layout_marginStart="16dp"
            android:layout_marginBottom="17dp"/>
    <Spinner
            android:layout_width="281dp"
            android:layout_height="33dp"
            android:id="@+id/tipo_doc_cliente" android:layout_marginTop="46dp"
            app:layout_constraintTop_toBottomOf="@+id/labelconocercliente1" android:layout_marginBottom="50dp"
            app:layout_constraintEnd_toEndOf="@+id/labelconocercliente1" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginLeft="16dp" app:layout_constraintBottom_toBottomOf="@+id/label_numdoccliente"
            android:layout_marginStart="16dp" android:layout_marginEnd="21dp" android:layout_marginRight="21dp"
            android:entries="@array/tipo_documento_cliente" app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintVertical_bias="0.0"/>

</androidx.constraintlayout.widget.ConstraintLayout>